Fix sizing on Mobile Device

--- a/resources/css/bodyContent.css
+++ b/resources/css/bodyContent.css
@@ -160,12 +160,19 @@
     }
 
     #body p {
+        font-size: 0.875rem;
+        line-height: 1.5rem;
         margin: 0.5em 0;
     }
 
     #body ul,
     #body ol {
         padding-left: 20px;
+        font-size: 0.875rem;
+    }
+
+    #body li {
+        line-height: 1.5rem;
     }
 
     #body blockquote {
@@ -189,6 +196,7 @@
     padding: 10px;
     border-radius: 5px;
     overflow-x: auto !important;
+    font-size: 0.875rem;
 }
 #body pre > div > span:first-child {
     display: none;
